my first commit

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
-    <title>Name | Home</title>
+    <title>Samir | Home</title>
 </head>
 
 <body>
     <!-- This is our tool bar at the top thats consistent to all pages. Allows users to jump page to page easily. -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light px-5">
-        <a class="navbar-brand" href="index.html">Name.</a>
+        <a class="navbar-brand" href="index.html">Samir.</a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="aboutme.html">About Me</a>
@@ -28,12 +28,11 @@
     </nav>
     <!-- these divs with containers work with bootstap and allow us to style the pages in blocks like we have done. -->
     <div class="px-4 py-5 text-center border-bottom bgimg">
-        <h1 class="display-4 fw-bold">Welcome to Saba's website!</h1>
+        <h1 class="display-4 fw-bold">Welcome to Samir's website!</h1>
         <div class="col-6 mx-auto">
             <p class="lead mb-4">
                 <b>
-                    This is ACM-W Girls.Code()'s sample website. We want to provide you with a template to help kickstart
-                    your first website to build your portfolio.
+                    My name is Samir Handa and Nada Aly-Nasr is my queen.
                 </b>
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
@@ -49,7 +48,7 @@
         <div class="row text-center mb-5"><h1>Social Media:</h1></div>
         <div class="row align-items-center">
             <div class="col-4 justify-content-center text-center">
-                <a href="https://www.instagram.com">
+                <a href="https://www.instagram.com/samirhanda04/">
                     <img src="./images/insta.png" class="testimonial mb-4">
                 </a>
             </div>
@@ -71,7 +70,7 @@
 </body>
 <footer class="text-center text-lg-start bg-light text-muted">
     <div class="text-center p-3" style="background-color: #edededcc;font-size: small;">
-        &#169; YOUR NAME 2021. All Rights Reserved. Users must be 18 and older.
+        &#169; SAMIR 2023. All Rights Reserved. Users must be 18 and older.
         <!-- <a class="text-dark" href="index.html">Nereus</a> -->
     </div>
 </footer>
